Updating table data

--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@ This game is genuine and trustable in Indian SATTA market. In this modern period
 <div class="rko" align="center"><font size="4">STAR PANEL CHART 
 </font></div>
 
-<table style="width: 100%; text-align:center;" class="panel-chart chart-table" cellpadding="2">
+<table class="RECORD">
                 	<thead> 
                 	<tr>
                 		<th>Date</th>
