Update table display

--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@ This game is genuine and trustable in Indian SATTA market. In this modern period
       </center>          
 <br/><div class="scroll_buttons_div"><button onclick="gotob()" class="buttons_for_scrolling">Go To Bottom</button></div>
                
-        <div class="f" align="center">
+        <div class="f" align="center" style="overflow-x:auto;">
 <div class="rko" align="center"><font size="4">STAR PANEL CHART 
 </font></div>
 
