--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 <!--<meta name="msvalidate.01" content="7E3BDD02B7A6B1922DFCC8E4D9DC2978">-->
-<title>Star Panel Chart, Star Chart, Satta Matka</title>
+<title>Star Day Panel Chart, Star Chart, Satta Matka</title>
 <meta name="description" content="Star Panel Chart - Get quickly updated Star chart, on a regular basis with Star Panel Chart. This game is trusted and genuine in SATTA market."> 
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <!--<script src="https://Kalyanpanelchart.in/firebase_script.js?v=1.0"></script>-->
@@ -390,7 +390,8 @@ This game is genuine and trustable in Indian SATTA market. In this modern period
         window.protag.display("protag-header");
     });
 </script>
-<div class="rka" align="center"><font color="Black">VIP DATE FIX GAME<font size="4"> DATE:- 08-09-2023<br/>STAR<br/><br/>2 OPEN  <br/> 2 JODI <br/> 2 PANEL<br/>
+<div class="rka" align="center"><font color="Black">Open Timing : 11:10 AM<br/><font color="Black">Close Timing : 12:10 PM</font></font>
+<!--<div class="rka" align="center"><font color="Black">VIP DATE FIX GAME<font size="4"> DATE:- 08-09-2023<br/>STAR<br/><br/>2 OPEN  <br/> 2 JODI <br/> 2 PANEL<br/>
 100% SURE AND PERFECT GAME<br/>
  Rs.2100 ONLY
 <br/><hr/>
@@ -497,7 +498,8 @@ This game is genuine and trustable in Indian SATTA market. In this modern period
     </td>
   </tr>
 </tbody></table>
-</div><center>
+</div>-->
+		<center>
 
       </center>          
 <br/><div class="scroll_buttons_div"><button onclick="gotob()" class="buttons_for_scrolling">Go To Bottom</button></div>
