--- a/index.html
+++ b/index.html
@@ -7433,15 +7433,25 @@ This game is genuine and trustable in Indian SATTA market. In this modern period
 <td class="r">50</td>
 <td class="r">3<br>7<br>0</td>
 
-
 <td class="">5<br>8<br>0</td>
 <td class="">31</td>
 <td class="">1<br>2<br>8</td>
 
-
 <td class="">6<br>6<br>9</td>
 <td class="">15</td>
 <td class="">5<br>0<br>0</td>
+
+<td class="r">1<br>6<br>7</td>
+<td class="r">49</td>
+<td class="r">4<br>5<br>0</td>
+
+<td class="">*<br>*<br>*</td>
+<td class="">**</td>
+<td class="">*<br>*<br>*</td>
+
+<td class="">*<br>*<br>*</td>
+<td class="">**</td>
+<td class="">*<br>*<br>*</td>
 
 </tr></tbody>
 </table>
