Updating star panel chart to star day panel chart

--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@ z-index: 999999;
     <div align="center">
        <div class="" align="center">
           <div class="" align="center">
-             <h1 class="main-heading">STAR PANEL CHART</h1>
+             <h1 class="main-heading">STAR DAY PANEL CHART</h1>
              <hr>
           </div>
        </div>
@@ -336,7 +336,7 @@ z-index: 999999;
     });
 </script>
 <div class="gray-gradiant entry-text">
-       <h2 style="margin-top: 0;">What is Star panel chart?</h2> <p>
+       <h2 style="margin-top: 0;">What is Star day panel chart?</h2> <p>
 Star Matka panel chart is a number of SATTA companies in Indian. Many Indian peoples are playing this Star game number. 
 
 <p>
@@ -445,7 +445,7 @@ This game is genuine and trustable in Indian SATTA market. In this modern period
     </td>
   </tr><tr>
     <td colspan="3" class="link1-table">
-       STARPANELCHART.IN
+       STARDAYPANELCHART.IN
       
 
 </td>
@@ -505,7 +505,7 @@ This game is genuine and trustable in Indian SATTA market. In this modern period
 <br/><div class="scroll_buttons_div"><button onclick="gotob()" class="buttons_for_scrolling">Go To Bottom</button></div>
                
         <div class="f" align="center" style="overflow-x:auto;">
-<div class="rko" align="center"><font size="4">STAR PANEL CHART 
+<div class="rko" align="center"><font size="4">STAR DAY PANEL CHART 
 </font></div>
 
 <table class="RECORD">
