--- a/index.html
+++ b/index.html
@@ -7453,6 +7453,10 @@ This game is genuine and trustable in Indian SATTA market. In this modern period
 <td class="">**</td>
 <td class="">*<br>*<br>*</td>
 
+<td class="">*<br>*<br>*</td>
+<td class="">**</td>
+<td class="">*<br>*<br>*</td>
+	
 </tr></tbody>
 </table>
 			
