--- a/index.html
+++ b/index.html
@@ -9,37 +9,37 @@
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <!--<script src="https://Kalyanpanelchart.in/firebase_script.js?v=1.0"></script>-->
 <script src="functions.js"></script>
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-167864639-1"></script>
+<!--<script async src="https://www.googletagmanager.com/gtag/js?id=UA-167864639-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'UA-167864639-1');
-</script>
+</script>-->
 
-<meta name="purpleads-verification" content="4d287c86cd0851561f0ed10b"/>
+<!--<meta name="purpleads-verification" content="4d287c86cd0851561f0ed10b"/>-->
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-169338453-1"></script>
+<!--<script async src="https://www.googletagmanager.com/gtag/js?id=UA-169338453-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'UA-169338453-1');
-</script>
+</script>-->
 <!--Google GPT/ADM code -->
-<script type="text/javascript" async="async" src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
+<!--<script type="text/javascript" async="async" src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
 <script type="text/javascript">
     window.googletag = window.googletag || { cmd: [] };
     window.googletag.cmd.push(function () {
         window.googletag.pubads().enableSingleRequest();
     });
-</script>
+</script>-->
 
 <!--Site config -->
-<script type="text/javascript" async="async" src="https://protagcdn.com/s/Kalyanpanelchart.in/site.js"></script>
+<!--<script type="text/javascript" async="async" src="https://protagcdn.com/s/Kalyanpanelchart.in/site.js"></script>
 <script type="text/javascript">
     window.protag = window.protag || { cmd: [] };
     window.protag.config = { s:'Starpanelchart.in', childADM: '22735365597', l: 'Arf30PQf' };
@@ -47,10 +47,11 @@
         window.protag.pageInit();
     });
 </script>
-<meta name="geo.region" content="IN-MH" />
-<meta name="geo.position" content="22.351115;78.667743" />
-<meta name="ICBM" content="22.351115, 78.667743" />
-<meta name="keywords" content="Star Panel Chart, Star Chart" />
+-->
+<!-- <meta name="geo.region" content="IN-MH" /> -->
+<!-- <meta name="geo.position" content="22.351115;78.667743" /> -->
+<!-- <meta name="ICBM" content="22.351115, 78.667743" /> -->
+<meta name="keywords" content="Star Day Panel Chart, Star Day, Star Chart, Star Panel" />
 <meta name="language" content="English" />
 <meta name="Search Engine" content="https://www.google.co.in" />
 <meta name="GOOGLEBOT" content="index, follow" />
@@ -58,18 +59,18 @@
 <meta name="expires" content="Never" />
 <meta name="RATING" content="General" />
 <meta name="REVISIT-AFTER" content="1 Day" />
-<meta name="author" content="Starpanelchart" />
-<meta name="classification" content="Star Panel Chart, Star Chart" />
-<meta name="OWNER" content="Starpanelchart" />
-<meta http-equiv="author" content="Starpanelchart" />
-<meta name="copyright" content="Starpanelchart" />
-<link rel="canonical" href="https://Kalyanpanelchart.in/" />
-<link rel="alternate" href="https://Kalyanpanelchart.in/" hreflang="en-in">
+<meta name="author" content="Stardaypanelchart" />
+<meta name="classification" content="Star Day Panel Chart, Star Day, Star Chart, Star Panel" />
+<meta name="OWNER" content="Stardaypanelchart" />
+<meta http-equiv="author" content="Stardaypanelchart" />
+<meta name="copyright" content="Stardaypanelchart" />
+<link rel="canonical" href="http://Stardaypanelchart.in/" />
+<link rel="alternate" href="http://Stardaypanelchart.in/" hreflang="en-in">
 <meta http-equiv="content-language" content="en-IN">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta property="og:locale" content="en_IN">
 <link rel="STYLESHEET" type="text/css" href="styles.css">
-<link rel="STYLESHEET" type="text/css" href="new.css">
+<!-- <link rel="STYLESHEET" type="text/css" href="new.css"> -->
 <link href='https://fonts.googleapis.com/css?family=Monoton' rel='stylesheet' type='text/css'>
 
 <style>
@@ -79,7 +80,7 @@ html {
   -khtml-user-select: none; /* Konqueror HTML */
   -moz-user-select: none; /* Firefox */
   -ms-user-select: none; /* Internet Explorer/Edge */
-  user-select: none; /* Non-prefixed version, currently supported by Chrome and Opera */
+  user-select: auto; /* Non-prefixed version, currently supported by Chrome and Opera */
 }
 .refresh-btn,.matka-card a{border:2px solid #ff006c;background-color:#ff006c;color:#fff;padding:3px 7px;border-radius:8px 0;box-shadow:0px 0px 1px #000000d6;font-size:12px;margin:2px 0 -1px;display:inline-block;transition:all .3s}.refresh-btn:hover,.matka-card a:hover{border:2px solid #ba004f;background-color:#ba004f;box-shadow:0px 0px 13px 3px #00000033;cursor:pointer}
 body { 
