--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@ This game is genuine and trustable in Indian SATTA market. In this modern period
    <div>
       <div class="info text-left shadow bg-color11" style=" background: linear-gradient(to bottom right,#1AFFFF,#8C66FF);padding:15px;"> 
          <h3 class="info-title" style="color:black;margin:5px;">Star</h3>
-            <p style="color:black;font-size: 28px;font-weight: bold;padding-top:0;" class="description">123-78-224</p>         
+            <p style="color:black;font-size: 28px;font-weight: bold;padding-top:0;" class="description">300-3*-***</p>         
       </div>
    </div>
    <hr></div>
@@ -7483,7 +7483,7 @@ This game is genuine and trustable in Indian SATTA market. In this modern period
    <div>
       <div class="info text-left shadow bg-color11" style="background-image:linear-gradient(to top right,#66FFFF,#F05C79);padding:15px;"> 
          <h3 class="info-title" style="color:black;margin:5px;">Star</h3>
-            <p style="color:black;font-size: 28px;font-weight: bold;padding-top:0;" class="description">124-78-224</p>         
+            <p style="color:black;font-size: 28px;font-weight: bold;padding-top:0;" class="description">300-3*-***</p>         
       </div>
    </div>
    <hr></div>
