--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@ This game is genuine and trustable in Indian SATTA market. In this modern period
    <div>
       <div class="info text-left shadow bg-color11" style=" background: linear-gradient(to bottom right,#1AFFFF,#8C66FF);padding:15px;"> 
          <h3 class="info-title" style="color:black;margin:5px;">Star</h3>
-            <p style="color:black;font-size: 28px;font-weight: bold;padding-top:0;" class="description">300-3*-***</p>         
+            <p style="color:black;font-size: 28px;font-weight: bold;padding-top:0;" class="description">300-33-580</p>         
       </div>
    </div>
    <hr></div>
@@ -7450,13 +7450,41 @@ This game is genuine and trustable in Indian SATTA market. In this modern period
 <td class="">03</td>
 <td class="">4<br>4<br>5</td>
 
-<td class="">4<br>5<br>9</td>
-<td class="">83</td>
-<td class="">3<br>4<br>6</td>
+<td class="r">4<br>5<br>9</td>
+<td class="r">83</td>
+<td class="r">3<br>4<br>6</td>
 
 <td class="">1<br>2<br>4</td>
 <td class="">78</td>
 <td class="">2<br>2<br>4</td>
+	
+</tr>
+<tr>
+<td>06/11/2023<br>to<br>12/11/2023</td>
+      
+<td class="r">3<br>0<br>0</td>
+<td class="r">33</td>
+<td class="r">5<br>8<br>0</td>
+
+<td class="">*<br>*<br>*</td>
+<td class="">**</td>
+<td class="">*<br>*<br>*</td>
+
+<td class="">*<br>*<br>*</td>
+<td class="">**</td>
+<td class="">*<br>*<br>*</td>
+
+<td class="">*<br>*<br>*</td>
+<td class="">**</td>
+<td class="">*<br>*<br>*</td>
+
+<td class="">*<br>*<br>*</td>
+<td class="">**</td>
+<td class="">*<br>*<br>*</td>
+
+<td class="">*<br>*<br>*</td>
+<td class="">**</td>
+<td class="">*<br>*<br>*</td>
 	
 </tr></tbody>
 </table>
@@ -7483,7 +7511,7 @@ This game is genuine and trustable in Indian SATTA market. In this modern period
    <div>
       <div class="info text-left shadow bg-color11" style="background-image:linear-gradient(to top right,#66FFFF,#F05C79);padding:15px;"> 
          <h3 class="info-title" style="color:black;margin:5px;">Star</h3>
-            <p style="color:black;font-size: 28px;font-weight: bold;padding-top:0;" class="description">300-3*-***</p>         
+            <p style="color:black;font-size: 28px;font-weight: bold;padding-top:0;" class="description">300-33-580</p>         
       </div>
    </div>
    <hr></div>
