--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@ This game is genuine and trustable in Indian SATTA market. In this modern period
    <div>
       <div class="info text-left shadow bg-color11" style=" background: linear-gradient(to bottom right,#1AFFFF,#8C66FF);padding:15px;"> 
          <h3 class="info-title" style="color:black;margin:5px;">Star</h3>
-            <p style="color:black;font-size: 28px;font-weight: bold;padding-top:0;" class="description">589-2X-XXX</p>         
+            <p style="color:black;font-size: 28px;font-weight: bold;padding-top:0;" class="description">589-22-200</p>         
       </div>
    </div>
    <hr></div>
@@ -7474,9 +7474,9 @@ This game is genuine and trustable in Indian SATTA market. In this modern period
 <td class="">70</td>
 <td class="">2<br>3<br>5</td>
 
-<td class="">*<br>*<br>*</td>
-<td class="">**</td>
-<td class="">*<br>*<br>*</td>
+<td class="r">5<br>8<br>9</td>
+<td class="r">22</td>
+<td class="r">2<br>0<br>0</td>
 
 <td class="">*<br>*<br>*</td>
 <td class="">**</td>
@@ -7515,7 +7515,7 @@ This game is genuine and trustable in Indian SATTA market. In this modern period
    <div>
       <div class="info text-left shadow bg-color11" style="background-image:linear-gradient(to top right,#66FFFF,#F05C79);padding:15px;"> 
          <h3 class="info-title" style="color:black;margin:5px;">Star</h3>
-            <p style="color:black;font-size: 28px;font-weight: bold;padding-top:0;" class="description">589-2X-XXX</p>         
+            <p style="color:black;font-size: 28px;font-weight: bold;padding-top:0;" class="description">589-22-200</p>         
       </div>
    </div>
    <hr></div>
