--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@ This game is genuine and trustable in Indian SATTA market. In this modern period
    <div>
       <div class="info text-left shadow bg-color11" style=" background: linear-gradient(to bottom right,#1AFFFF,#8C66FF);padding:15px;"> 
          <h3 class="info-title" style="color:black;margin:5px;">Star</h3>
-            <p style="color:black;font-size: 28px;font-weight: bold;padding-top:0;" class="description">469-9X-XXX</p>         
+            <p style="color:black;font-size: 28px;font-weight: bold;padding-top:0;" class="description">469-97-124</p>         
       </div>
    </div>
    <hr></div>
@@ -7490,6 +7490,34 @@ This game is genuine and trustable in Indian SATTA market. In this modern period
 <td class="">**</td>
 <td class="">*<br>*<br>*</td>
 	
+</tr>
+<tr>
+<td>13/11/2023<br>to<br>19/11/2023</td>
+      
+<td class="">4<br>6<br>9</td>
+<td class="">97</td>
+<td class="">1<br>2<br>4</td>
+
+<td class="">*<br>*<br>*</td>
+<td class="">**</td>
+<td class="">*<br>*<br>*</td>
+
+<td class="">*<br>*<br>*</td>
+<td class="">**</td>
+<td class="">*<br>*<br>*</td>
+
+<td class="">*<br>*<br>*</td>
+<td class="">**</td>
+<td class="">*<br>*<br>*</td>
+
+<td class="">*<br>*<br>*</td>
+<td class="">**</td>
+<td class="">*<br>*<br>*</td>
+
+<td class="">*<br>*<br>*</td>
+<td class="">**</td>
+<td class="">*<br>*<br>*</td>
+	
 </tr></tbody>
 </table>
 			
@@ -7515,7 +7543,7 @@ This game is genuine and trustable in Indian SATTA market. In this modern period
    <div>
       <div class="info text-left shadow bg-color11" style="background-image:linear-gradient(to top right,#66FFFF,#F05C79);padding:15px;"> 
          <h3 class="info-title" style="color:black;margin:5px;">Star</h3>
-            <p style="color:black;font-size: 28px;font-weight: bold;padding-top:0;" class="description">469-9X-XXX</p>         
+            <p style="color:black;font-size: 28px;font-weight: bold;padding-top:0;" class="description">469-97-124</p>         
       </div>
    </div>
    <hr></div>
