Update index - Meta Google

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
+<meta name="google-site-verification" content="NdUQr8851wNua-2v9w2zPk1WgANNMm8pp1IO2OA2A4o" />
 <!--<meta name="msvalidate.01" content="7E3BDD02B7A6B1922DFCC8E4D9DC2978">-->
 <title>Star Day Panel Chart, Star Chart, Satta Matka</title>
 <meta name="description" content="Star Panel Chart - Get quickly updated Star chart, on a regular basis with Star Panel Chart. This game is trusted and genuine in SATTA market."> 
