--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <!-- <meta name="geo.region" content="IN-MH" /> -->
 <!-- <meta name="geo.position" content="22.351115;78.667743" /> -->
 <!-- <meta name="ICBM" content="22.351115, 78.667743" /> -->
-<meta name="keywords" content="Star Day Panel Chart, Star Day, Star Chart, Star Panel" />
+<meta name="keywords" content="Star Day Panel Chart, Star Day, Star Chart, Star Panel, Star Panel Chart" />
 <meta name="language" content="English" />
 <meta name="Search Engine" content="https://www.google.co.in" />
 <meta name="GOOGLEBOT" content="index, follow" />
@@ -376,7 +376,7 @@ This game is genuine and trustable in Indian SATTA market. In this modern period
    <div>
       <div class="info text-left shadow bg-color11" style=" background: linear-gradient(to bottom right,#1AFFFF,#8C66FF);padding:15px;"> 
          <h3 class="info-title" style="color:black;margin:5px;">Star</h3>
-            <p style="color:black;font-size: 28px;font-weight: bold;padding-top:0;" class="description">457-6X-XXX</p>         
+            <p style="color:black;font-size: 28px;font-weight: bold;padding-top:0;" class="description">457-69-469</p>         
       </div>
    </div>
    <hr></div>
@@ -7542,9 +7542,9 @@ This game is genuine and trustable in Indian SATTA market. In this modern period
 <td class="">46</td>
 <td class="">3<br>4<br>9</td>
 
-<td class="">*<br>*<br>*</td>
-<td class="">**</td>
-<td class="">*<br>*<br>*</td>
+<td class="">4<br>5<br>7</td>
+<td class="">69</td>
+<td class="">4<br>6<br>9</td>
 
 <td class="">*<br>*<br>*</td>
 <td class="">**</td>
@@ -7580,7 +7580,7 @@ This game is genuine and trustable in Indian SATTA market. In this modern period
    <div>
       <div class="info text-left shadow bg-color11" style="background-image:linear-gradient(to top right,#66FFFF,#F05C79);padding:15px;"> 
          <h3 class="info-title" style="color:black;margin:5px;">Star</h3>
-            <p style="color:black;font-size: 28px;font-weight: bold;padding-top:0;" class="description">457-6X-XXX</p>         
+            <p style="color:black;font-size: 28px;font-weight: bold;padding-top:0;" class="description">457-69-469</p>         
       </div>
    </div>
    <hr></div>
