--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@ This game is genuine and trustable in Indian SATTA market. In this modern period
    <div>
       <div class="info text-left shadow bg-color11" style=" background: linear-gradient(to bottom right,#1AFFFF,#8C66FF);padding:15px;"> 
          <h3 class="info-title" style="color:black;margin:5px;">Star</h3>
-            <p style="color:black;font-size: 28px;font-weight: bold;padding-top:0;" class="description">700-7X-XXX</p>         
+            <p style="color:black;font-size: 28px;font-weight: bold;padding-top:0;" class="description">700-72-110</p>         
       </div>
    </div>
    <hr></div>
@@ -7587,6 +7587,38 @@ This game is genuine and trustable in Indian SATTA market. In this modern period
 <td class="">2<br>3<br>6</td>
 	
 </tr>
+<tr>
+<td>04/12/2023<br>to<br>10/12/2023</td>
+      
+<td class="r">7<br>0<br>0</td>
+<td class="r">12</td>
+<td class="r">1<br>1<br>0</td>
+
+<td class="">*<br>*<br>*</td>
+<td class="">**</td>
+<td class="">*<br>*<br>*</td>
+
+<td class="">*<br>*<br>*</td>
+<td class="">**</td>
+<td class="">*<br>*<br>*</td>
+
+<td class="">*<br>*<br>*</td>
+<td class="">**</td>
+<td class="">*<br>*<br>*</td>
+
+<td class="">*<br>*<br>*</td>
+<td class="">**</td>
+<td class="">*<br>*<br>*</td>
+
+<td class="">*<br>*<br>*</td>
+<td class="">**</td>
+<td class="">*<br>*<br>*</td>
+
+<td class="">*<br>*<br>*</td>
+<td class="">**</td>
+<td class="">*<br>*<br>*</td>
+	
+</tr>
 			</tbody>
 </table>
 			
@@ -7612,7 +7644,7 @@ This game is genuine and trustable in Indian SATTA market. In this modern period
    <div>
       <div class="info text-left shadow bg-color11" style="background-image:linear-gradient(to top right,#66FFFF,#F05C79);padding:15px;"> 
          <h3 class="info-title" style="color:black;margin:5px;">Star</h3>
-            <p style="color:black;font-size: 28px;font-weight: bold;padding-top:0;" class="description">700-7X-XXX</p>         
+            <p style="color:black;font-size: 28px;font-weight: bold;padding-top:0;" class="description">700-72-110</p>         
       </div>
    </div>
    <hr></div>
