--- a/index.html
+++ b/index.html
@@ -7669,17 +7669,17 @@ This game is genuine and trustable in Indian SATTA market. In this modern period
 <td class="">04</td>
 <td class="">2<br>5<br>7</td>
 
-<td class="">*<br>*<br>*</td>
-<td class="">**</td>
-<td class="">*<br>*<br>*</td>
+<td class="r">4<br>7<br>8</td>
+<td class="r">94</td>
+<td class="r">1<br>6<br>7</td>
 
-<td class="">*<br>*<br>*</td>
-<td class="">**</td>
-<td class="">*<br>*<br>*</td>
+<td class="">8<br>8<br>0</td>
+<td class="">60</td>
+<td class="">6<br>7<br>7</td>
 
-<td class="">*<br>*<br>*</td>
-<td class="">**</td>
-<td class="">*<br>*<br>*</td>
+<td class="">9<br>0<br>0</td>
+<td class="">93</td>
+<td class="">2<br>5<br>6</td>
 	
 </tr></tbody>
 </table>
